# swarm-it-auth

./: .gitignore  LICENSE  PATENT_NOTICE.md  README.md  pyproject.toml
docs/: AGENT_PATTERNS.md  INTEGRATION_GUIDE.md  RECOMMENDED_ARCHITECTURE.md
docs/analysis/: xiaomi-mimo-v2-flash-integration.md
examples/: agent_credential_flow.py  api_key_service.py  basic_auth.py
swarm_auth/: __init__.py  credentials.py
swarm_auth/adapters/: __init__.py  api_key_auth.py  aws_credential.py  aws_credential_broker.py  dynamodb_session.py  env_credential.py  gcp_credential_broker.py  header_identity.py  jwt_auth.py  memory_blacklist.py  memory_session.py  opa_policy.py  openai_credential_broker.py  rbac_policy.py  redis_blacklist.py  redis_session.py  vault_broker.py  vault_credential.py
swarm_auth/cli/: __init__.py  env_to_secrets.py
swarm_auth/domain/: __init__.py  credential.py  session.py  user.py
swarm_auth/ports/: __init__.py  auth_port.py  blacklist_port.py  credential_broker_port.py  credential_port.py  policy_port.py  session_port.py
swarm_auth/sdk/: __init__.py  client.py
tests/: __init__.py
tests/integration/: test_api_integration.py  test_complete_flow.py  test_credential_adapters.py  test_jwt_flow.py  test_redis_session.py
tests/unit/: test_header_identity.py  test_rbac_policy.py  test_session.py  test_user.py
